--- a/index.html
+++ b/index.html
@@ -3,69 +3,98 @@
 
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Kamiko</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
   <link rel="icon" href="./images/icon.png" />
 </head>
 
 <body>
-    <div class="wrapper">
-      <div class="nav">
+  <div class="wrapper">
+    <div class="nav">
+      <div class="nav__items">
         <div class="nav__container">
-        <img src="images/icon.png" alt>
-        <p>Kamiko</p>
+          <a href="/">
+            <img src="images/icon.png" alt>
+          </a>
+        </div>
+        <div class="nav__container">
+          <a href="https://discord.com/api/oauth2/authorize?client_id=980377656291913728&permissions=8&scope=bot">
+            <button>Добавить в Discord</button>
+          </a>
+          <a href="https://discord.gg/QRTDqhT7Jk">
+            <button>Сервер поддержки</button>
+          </a>
+          <a href="commands.html">
+            <button>Команды</button>
+          </a>
+        </div>
       </div>
-      <div class="nav__container">
-        <a href="#main">
-          <button>О боте</button>
-        </a>
-        <a href="#function">
-          <button>Команды</button>
-        </a>
-        <a href="#support">
-          <button>Поддержка</button>
-        </a>
-      </div>
+      <div class="nav__items">
         <div class="nav__container" onclick="info()">≡</div>
       </div>
-  <div class="info">
-      <!--<div class="info__close">⨉</div>
-      <ul>
-        <a href="#main">
-          <li>О боте</li>
-        </a>
-        <a href="#function">
-          <li>Функции</li>
-        </a>
-        <a href="#support">
-          <li>Поддержка</li>
-        </a>
-      </ul>
-  </div-->
-      <h1>Kamiko</h1></ br>
+    </div>
+    <div class="info">
+      <h1>Kamiko</h1>
       <p class="info__weight">Один из самых лучших аниме-ботов на слэш-командах</p>
       <div class="info__buttons">
-      <a href="https://discord.com/api/oauth2/authorize?client_id=980377656291913728&permissions=8&scope=bot" target="_blank">
-         <p>Добавить на сервер</p>
-      </a>
-      <a href="https://discord.gg/QRTDqhT7Jk" target="_blank">
-         <p>Сервер поддержки</p>
-      </a>
-      <a href="#">
-         <p>Top.gg</p>
-      </a>
+        <a href="https://discord.com/api/oauth2/authorize?client_id=980377656291913728&permissions=8&scope=bot"
+          target="_blank">
+          <p>Добавить на сервер</p>
+        </a>
+        <a href="https://discord.gg/QRTDqhT7Jk" target="_blank">
+          <p>Сервер поддержки</p>
+        </a>
+        <a href="#">
+          <p>Top.gg</p>
+        </a>
       </div>
     </div>
     <div class="main" id="main">
-      <h2>О боте</h2>
-      <p>Lorem Ipsum - это текст-"рыба", часто используемый в печати и веб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI века. В то время некий безымянный печатник создал большую коллекцию размеров и форм шрифтов, используя Lorem Ipsum для распечатки образцов. Lorem Ipsum не только успешно пережил без заметных изменений пять веков, но и перешагнул в электронный дизайн. Его популяризации в новое время послужили публикация листов Letraset с образцами Lorem Ipsum в 60-х годах и, в более недавнее время, программы электронной вёрстки типа Aldus PageMaker, в шаблонах которых используется Lorem Ipsum.</p>
+      <h2>Почему Kamiko?</h2>
+      <p>Lorem Ipsum - это текст-"рыба", часто используемый в печати и веб-дизайне. Lorem Ipsum является стандартной
+        "рыбой" для текстов на латинице с начала XVI века. В то время некий безымянный печатник создал большую коллекцию
+        размеров и форм шрифтов, используя Lorem Ipsum для распечатки образцов. Lorem Ipsum не только успешно пережил
+        без заметных изменений пять веков, но и перешагнул в электронный дизайн. Его популяризации в новое время
+        послужили публикация листов Letraset с образцами Lorem Ipsum в 60-х годах и, в более недавнее время, программы
+        электронной вёрстки типа Aldus PageMaker, в шаблонах которых используется Lorem Ipsum.</p>
     </div>
-      <div class="functions" id="function">
+    </div>
+ <div class="advantages">
+      <div class="uptime">
+      <h4>Непрерывная работа 99,99%</h4>
+        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, </p>
       </div>
-      <!--<div class="support" id="support">
+      <div class="chat">
+      <h4>Чат</h4>
+        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, </p>
+      </div>
+      <div class="function2">
+      <h4>Функции</h4>
+        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, </p>
+      </div>
+      <div class="text3">
+      <h4>Безопасность</h4>
+        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, </p>
+      </div>
+ </div>
+  <div class="buttons2">
+    <h3>Готовы начать своё приключение?</h3>
+    <div class="invitebot">
+    <a href="https://discord.com/api/oauth2/authorize?client_id=980377656291913728&permissions=8&scope=bot" 
+      target="_blank">
+      <p>Добавить в Discord</p>
+    </a>
+    </div>
+    <div class="helping">
+    <a href="https://discord.gg/QRTDqhT7Jk" target="_blank">
+      <p>Сервер поддержки</p>
+    </a>
+    </div>
+  </div>
+    <!--<div class="support" id="support">
         <p>Поддержка</p>
-    </div-->
+</div-->
   </div>
   <script src="script.js"></script>
 </body>
