--- a/index.html
+++ b/index.html
@@ -60,26 +60,34 @@
         электронной вёрстки типа Aldus PageMaker, в шаблонах которых используется Lorem Ipsum.</p>
     </div>
     </div>
+  <div class="advantages1">
  <div class="advantages">
+   <div class="uptimes2">
       <div class="uptime">
-      <h4>Непрерывная работа 99,99%</h4>
-        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, </p>
+      <h3>Непрерывная работа 99,99%</h3>
+        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting,</p>
       </div>
       <div class="chat">
-      <h4>Чат</h4>
-        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, </p>
+      <h3>Чат</h3>
+        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting,</p>
       </div>
+   </div >
+   <div class="function5">
       <div class="function2">
-      <h4>Функции</h4>
-        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, </p>
+      <h3>Функции</h3>
+        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting,
+        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting,</p>
       </div>
       <div class="text3">
-      <h4>Безопасность</h4>
-        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, </p>
+      <h3>Безопасность</h3>
+        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,</p>
       </div>
+   </div>
  </div>
-  <div class="buttons2">
-    <h3>Готовы начать своё приключение?</h3>
+  </div>
+  <!--<div class="buttons2">
+    <h5>Готовы начать своё приключение?</h5>
+  <div class="buttons3">
     <div class="invitebot">
     <a href="https://discord.com/api/oauth2/authorize?client_id=980377656291913728&permissions=8&scope=bot" 
       target="_blank">
@@ -91,11 +99,18 @@
       <p>Сервер поддержки</p>
     </a>
     </div>
-  </div>
-    <!--<div class="support" id="support">
-        <p>Поддержка</p>
+</div--> 
+  <!--<div class="">
+    <p>Разработка сайта: </p>
+          <a href="https://coconutf.tk/">
+            <button>Сoconutf</button>
+          </a>
+          <a href="https://wynne.tk/">
+            <button>Wynne</button>
+          </a>
 </div-->
-  </div>
+</div>
+
   <script src="script.js"></script>
 </body>
 
