--- a/commands.html
+++ b/commands.html
@@ -22,7 +22,7 @@
           </a>
         </div>
         <div class="nav__container">
-          <a href="https://discord.com/api/oauth2/authorize?client_id=980377656291913728&permissions=8&scope=bot">
+          <a href="https://discord.com/api/oauth2/authorize?client_id=980377656291913728&permissions=8&scope=bot" target="_blank">
             <button><svg version="1.0" xmlns="http://www.w3.org/2000/svg" width="22px" height="22px"
                 viewBox="0 0 512.000000 512.000000" preserveAspectRatio="xMidYMid meet">
                 <g transform="translate(0.000000,512.000000) scale(0.100000,-0.100000)" stroke="none">
@@ -31,7 +31,7 @@
                 </g>
               </svg>Добавить в Discord</button>
           </a>
-          <a href="https://discord.gg/QRTDqhT7Jk">
+          <a href="https://discord.gg/QRTDqhT7Jk" target="_blank">
             <button><svg version="1.0" xmlns="http://www.w3.org/2000/svg" width="22px" height="22px"
                 viewBox="0 0 512.000000 512.000000" preserveAspectRatio="xMidYMid meet">
                 <g transform="translate(0.000000,512.000000) scale(0.100000,-0.100000)" stroke="none">
@@ -61,7 +61,8 @@
     <div class="main">
       <div class="main__items">
         <h2>Команды Kamiko</h2>
-        <p>Здесь перечислены все команды Discord-бота<br/>Аргументы: {обязательные}, (необязательные)</p>
+        <p>Здесь перечислены все команды Discord-бота</p>
+        <p>Аргументы: {обязательные} и (необязательные)</p>
       </div>
       <div class="main__items">
         <ul>
@@ -74,7 +75,7 @@
     </div>
     <div class="cmd">
       <div class="cmd__items">
-        <span>Все команды</span>
+        <span class="spanActive">Все команды (▽◕ ᴥ ◕▽)</span>
       </div>
       <div class="cmd__items">
         <div class="cmd__container cmd__1 basic">
