--- a/commands.html
+++ b/commands.html
@@ -55,7 +55,20 @@
         </div>
       </div>
       <div class="nav__items">
-        <div class="nav__container" onclick="info()">≡</div>
+        <div class="nav__container menuActive" onclick="menu()">☰</div>
+      </div>
+      <div class="menu">
+        <ul>
+          <a href="https://discord.com/oauth2/authorize?client_id=980377656291913728&permissions=8&scope=bot" target="_blank">
+            <li>Добавить в Discord</li>
+          </a>
+          <a href="https://discord.com/invite/QRTDqhT7Jk" target="_blank">
+            <li>Сервер поддержки</li>
+          </a>
+          <a href="commands.html">
+            <li>Команды</li>
+          </a>
+        </ul>
       </div>
     </div>
     <div class="main">
