--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
    </div>
  </div>
   </div>
-  <!--<div class="buttons2">
+  <div class="buttons2">
     <h5>Готовы начать своё приключение?</h5>
   <div class="buttons3">
     <div class="invitebot">
@@ -99,7 +99,7 @@
       <p>Сервер поддержки</p>
     </a>
     </div>
-</div--> 
+</div> 
   <!--<div class="">
     <p>Разработка сайта: </p>
           <a href="https://coconutf.tk/">
@@ -108,7 +108,7 @@
           <a href="https://wynne.tk/">
             <button>Wynne</button>
           </a>
-</div-->
+  </div-->
 </div>
 
   <script src="script.js"></script>
