--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Kamiko</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
+  <link href="style_cmd.css" rel="stylesheet" type="text/css" />
   <link rel="icon" href="./images/icon.png" />
+  <script src="https://code.jquery.com/jquery-3.6.1.min.js"
+    integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -19,38 +22,73 @@
           </a>
         </div>
         <div class="nav__container">
-          <a href="https://discord.com/api/oauth2/authorize?client_id=980377656291913728&permissions=8&scope=bot">
-            <button>Добавить в Discord</button>
+          <a href="https://discord.com/api/oauth2/authorize?client_id=980377656291913728&permissions=8&scope=bot"
+            target="_blank">
+            <button><svg version="1.0" xmlns="http://www.w3.org/2000/svg" width="22px" height="22px"
+                viewBox="0 0 512.000000 512.000000" preserveAspectRatio="xMidYMid meet">
+                <g transform="translate(0.000000,512.000000) scale(0.100000,-0.100000)" stroke="none">
+                  <path
+                    d="M1690 4485 c-317 -70 -559 -148 -858 -275 -49 -21 -57 -30 -126 -139 -330 -522 -544 -1059 -641 -1610 -50 -287 -59 -412 -58 -766 1 -181 5 -355 10 -385 l8 -54 130 -89 c325 -221 663 -391 1017 -512 73 -25 138 -43 144 -41 25 10 274 407 274 437 0 4 -26 17 -57 29 -79 31 -335 158 -352 175 -17 17 -13 23 41 62 l43 31 100 -43 c528 -225 1131 -298 1690 -204 257 43 491 114 766 232 35 15 36 15 80 -20 24 -19 44 -40 44 -46 0 -14 -209 -124 -320 -168 -44 -18 -84 -36 -89 -40 -20 -18 239 -448 270 -449 7 0 65 18 130 41 369 127 702 294 1029 516 l130 89 7 54 c3 30 9 159 13 285 28 882 -200 1686 -702 2477 l-74 116 -137 57 c-253 105 -583 205 -826 250 l-90 17 -17 -24 c-10 -12 -42 -74 -71 -137 l-53 -113 -50 6 c-27 3 -93 11 -145 18 -124 16 -645 16 -775 0 -55 -6 -122 -14 -150 -18 l-50 -5 -65 133 c-76 155 -63 148 -220 113z m204 -1649 c131 -64 226 -189 262 -343 20 -84 14 -223 -14 -304 -115 -344 -492 -448 -737 -204 -160 160 -199 419 -95 632 57 115 150 199 269 240 55 20 80 23 154 20 76 -4 98 -9 161 -41z m1702 -1 c171 -84 274 -259 274 -465 0 -150 -47 -274 -142 -375 -260 -279 -680 -133 -764 265 -44 209 47 442 216 550 82 53 151 71 253 66 77 -3 98 -8 163 -41z" />
+                </g>
+              </svg>Добавить в Discord</button>
           </a>
-          <a href="https://discord.gg/QRTDqhT7Jk">
-            <button>Сервер поддержки</button>
+          <a href="https://discord.gg/QRTDqhT7Jk" target="_blank">
+            <button><svg version="1.0" xmlns="http://www.w3.org/2000/svg" width="22px" height="22px"
+                viewBox="0 0 512.000000 512.000000" preserveAspectRatio="xMidYMid meet">
+                <g transform="translate(0.000000,512.000000) scale(0.100000,-0.100000)" stroke="none">
+                  <path
+                    d="M613 4515 c-177 -48 -321 -186 -376 -360 -22 -70 -22 -74 -22 -795 0 -721 0 -725 22 -795 55 -176 200 -313 380 -360 38 -10 106 -15 200 -15 l143 0 0 -339 0 -339 26 -31 c27 -32 76 -48 116 -36 12 4 190 173 393 376 l371 369 545 0 c457 0 554 2 604 15 181 47 333 199 380 380 23 88 23 1462 0 1550 -47 181 -199 333 -380 380 -52 13 -207 15 -1205 14 -951 0 -1154 -3 -1197 -14z m2128 -654 c47 -48 37 -130 -21 -164 -26 -16 -105 -17 -905 -17 -973 0 -922 -4 -951 67 -19 43 -5 93 33 123 25 20 39 20 920 20 l895 0 29 -29z m-37 -405 c18 -8 41 -24 50 -37 21 -30 21 -88 0 -118 -37 -52 -18 -51 -945 -51 -955 0 -911 -3 -943 65 -20 41 -20 49 0 90 32 68 -14 65 942 65 715 0 868 -2 896 -14z m16 -433 c58 -34 68 -116 21 -164 l-29 -29 -894 0 c-993 0 -924 -5 -955 67 -19 47 -3 97 41 124 30 18 61 19 909 19 802 0 881 -1 907 -17z" />
+                  <path
+                    d="M3627 2983 c-3 -324 -6 -387 -22 -443 -75 -274 -270 -469 -545 -546 -58 -16 -120 -18 -547 -21 l-483 -4 0 -143 c0 -95 5 -161 15 -201 47 -181 199 -333 380 -380 49 -12 136 -15 499 -15 l441 0 320 -320 c304 -304 323 -320 357 -320 49 0 81 16 101 50 15 24 17 65 17 309 l0 281 143 0 c95 0 162 5 201 15 177 46 320 180 378 354 22 64 22 80 26 641 4 656 1 695 -57 815 -64 133 -158 219 -301 274 l-65 26 -427 3 -426 3 -5 -378z m578 -169 c31 -14 65 -64 65 -94 0 -30 -34 -80 -65 -94 -44 -21 -250 -22 -300 -2 -35 15 -65 59 -65 96 0 36 30 81 63 95 47 21 258 20 302 -1z m6 -430 c42 -21 64 -75 49 -120 -6 -18 -23 -43 -37 -54 -24 -18 -40 -20 -222 -20 -219 0 -231 3 -258 67 -19 47 -3 97 41 124 28 17 51 19 214 19 147 0 189 -3 213 -16z m12 -434 c38 -30 52 -80 33 -123 -27 -66 -35 -67 -416 -67 -381 0 -389 1 -416 67 -19 43 -5 93 33 123 25 19 40 20 383 20 343 0 358 -1 383 -20z" />
+                </g>
+              </svg>Сервер поддержки</button>
           </a>
           <a href="commands.html">
-            <button>Команды</button>
+            <button><svg version="1.0" xmlns="http://www.w3.org/2000/svg" width="22px" height="22px"
+                viewBox="0 0 512.000000 512.000000" preserveAspectRatio="xMidYMid meet">
+
+                <g transform="translate(0.000000,512.000000) scale(0.100000,-0.100000)" stroke="none">
+                  <path
+                    d="M2325 4791 c-91 -23 -173 -90 -215 -176 -22 -45 -25 -65 -28 -205 l-4 -155 -96 -34 c-54 -18 -139 -54 -190 -79 l-93 -45 -102 101 c-109 107 -154 134 -244 147 -62 8 -155 -13 -210 -49 -21 -13 -102 -89 -180 -168 -159 -160 -183 -200 -190 -308 -8 -110 19 -164 145 -292 l105 -107 -46 -94 c-26 -52 -61 -137 -79 -190 l-32 -95 -156 -4 c-139 -4 -160 -7 -205 -28 -63 -31 -124 -91 -155 -155 -25 -49 -25 -54 -25 -295 0 -234 1 -247 23 -290 35 -72 75 -114 144 -151 63 -33 64 -34 219 -37 l156 -4 22 -72 c13 -39 48 -124 79 -189 l55 -117 -101 -104 c-125 -127 -147 -168 -147 -281 0 -121 22 -158 202 -337 173 -172 223 -202 333 -202 114 -1 159 22 282 142 l108 105 118 -55 c64 -31 149 -66 188 -79 l72 -22 4 -156 c3 -135 7 -162 26 -201 34 -71 75 -113 144 -151 l63 -34 245 0 245 0 63 34 c70 38 101 70 140 145 24 47 26 62 30 206 l4 156 94 32 c52 17 137 53 189 79 l95 46 108 -105 c121 -118 168 -142 277 -142 119 0 152 19 328 193 188 186 212 224 212 341 0 118 -20 156 -143 282 l-105 108 55 117 c31 65 66 150 79 189 l22 72 156 4 c145 4 160 6 207 30 75 39 107 70 145 140 l34 63 0 245 0 245 -34 63 c-38 69 -80 110 -151 144 -39 19 -66 23 -200 26 l-156 4 -32 96 c-18 52 -54 137 -79 189 l-46 93 105 108 c123 126 143 164 143 282 0 117 -24 155 -212 341 -180 177 -209 194 -338 193 -103 0 -148 -25 -270 -145 l-103 -100 -93 44 c-52 25 -137 60 -191 78 l-96 33 -4 156 c-3 154 -4 155 -37 218 -37 69 -80 109 -151 144 -42 21 -59 23 -270 25 -124 1 -238 -2 -255 -6z m470 -1301 c183 -49 305 -120 440 -255 136 -137 206 -259 256 -445 30 -110 33 -337 6 -444 -47 -186 -125 -324 -262 -461 -179 -178 -373 -267 -620 -281 -288 -17 -560 93 -762 310 -106 114 -180 251 -225 416 -29 109 -32 334 -5 444 44 178 128 327 257 457 150 152 331 246 535 279 96 15 288 5 380 -20z" />
+                </g>
+              </svg>Команды</button>
           </a>
         </div>
       </div>
       <div class="nav__items">
-        <div class="nav__container" onclick="info()">≡</div>
+        <div class="nav__container menuActive" onclick="menu()">☰</div>
+      </div>
+      <div class="menu">
+        <ul>
+          <a href="https://discord.com/oauth2/authorize?client_id=980377656291913728&permissions=8&scope=bot"
+            target="_blank">
+            <li>Добавить в Discord</li>
+          </a>
+          <a href="https://discord.com/invite/QRTDqhT7Jk" target="_blank">
+            <li>Сервер поддержки</li>
+          </a>
+          <a href="commands.html">
+            <li>Команды</li>
+          </a>
+        </ul>
       </div>
     </div>
     <div class="info">
-      <h1>Kamiko</h1>
-      <p class="info__weight">Один из самых лучших аниме-ботов на слэш-командах</p>
-      <div class="info__buttons">
-        <a href="https://discord.com/api/oauth2/authorize?client_id=980377656291913728&permissions=8&scope=bot"
-          target="_blank">
-          <p>Добавить на сервер</p>
-        </a>
-        <a href="https://discord.gg/QRTDqhT7Jk" target="_blank">
-          <p>Сервер поддержки</p>
-        </a>
-        <a href="#">
-          <p>Top.gg</p>
-        </a>
+      <div class="info__items">
+        <h1>Укрась свой Discord-сервер</h1>
+        <p>Kamiko — один из самых лучших аниме-ботов для лампового общения</p>
+        <div>
+          <a href="https://discord.com/api/oauth2/authorize?client_id=980377656291913728&permissions=8&scope=bot"
+            target="_blank">
+            <p>Добавить в Discord</p>
+          </a>
+          <a href="#main">
+            <p>Подробнее</p>
+          </a>
+        </div>
       </div>
     </div>
-    <div class="main" id="main">
+    <div class="main2" id="main">
       <h2>Почему Kamiko?</h2>
       <p>Lorem Ipsum - это текст-"рыба", часто используемый в печати и веб-дизайне. Lorem Ipsum является стандартной
         "рыбой" для текстов на латинице с начала XVI века. В то время некий безымянный печатник создал большую коллекцию
@@ -59,57 +97,104 @@
         послужили публикация листов Letraset с образцами Lorem Ipsum в 60-х годах и, в более недавнее время, программы
         электронной вёрстки типа Aldus PageMaker, в шаблонах которых используется Lorem Ipsum.</p>
     </div>
-    </div>
-  <div class="advantages1">
- <div class="advantages">
-   <div class="uptimes2">
-      <div class="uptime">
-      <h3>Непрерывная работа 99,99%</h3>
-        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting,</p>
-      </div>
-      <div class="chat">
-      <h3>Чат</h3>
-        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting,</p>
-      </div>
-   </div >
-   <div class="function5">
-      <div class="function2">
-      <h3>Функции</h3>
-        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting,
-        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting,</p>
-      </div>
-      <div class="text3">
-      <h3>Безопасность</h3>
-        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,</p>
-      </div>
-   </div>
- </div>
   </div>
-  <div class="buttons2">
-    <h5>Готовы начать своё приключение?</h5>
-  <div class="buttons3">
-    <div class="invitebot">
-    <a href="https://discord.com/api/oauth2/authorize?client_id=980377656291913728&permissions=8&scope=bot" 
-      target="_blank">
-      <p>Добавить в Discord</p>
-    </a>
+  <div class="advantages1">
+    <div class="advantages">
+      <div class="uptimes2">
+        <div class="uptime">
+          <h3>Непрерывная работа 99,99%</h3>
+          <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+            industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
+            scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into
+            electronic typesetting,</p>
+        </div>
+        <div class="chat">
+          <h3>Чат</h3>
+          <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+            industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
+            scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into
+            electronic typesetting,</p>
+        </div>
+      </div>
+      <div class="function5">
+        <div class="function2">
+          <h3>Функции</h3>
+          <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+            industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
+            scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into
+            electronic typesetting,
+            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+            industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
+            scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into
+            electronic typesetting,</p>
+        </div>
+        <div class="text3">
+          <h3>Безопасность</h3>
+          <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+            industry's standard dummy text ever since the 1500s,</p>
+        </div>
+      </div>
     </div>
-    <div class="helping">
-    <a href="https://discord.gg/QRTDqhT7Jk" target="_blank">
-      <p>Сервер поддержки</p>
-    </a>
+  </div>
+  <div class="support">
+    <div class="support__items">
+      <h5>Создайте уютную атмосферу</h5>
+      <div class="support__containers">
+        <div class="support__container">
+          <a href="https://discord.com/oauth2/authorize?client_id=980377656291913728&permissions=8&scope=bot"
+            target="_blank">
+            Добавить в Discord
+          </a>
+        </div>
+        <div class="support__container">
+          <a href="https://discord.com/invite/QRTDqhT7Jk" target="_blank">Сервер поддержки
+          </a>
+        </div>
+      </div>
     </div>
-</div> 
-  <!--<div class="">
-    <p>Разработка сайта: </p>
-          <a href="https://coconutf.tk/">
-            <button>Сoconutf</button>
+  </div>
+  <div class="footer">
+    <div class="footer__wrapper">
+      <div class="footer__container">
+        <div class="footer-logo"><img src="./images/icon.png" width="50px"></div>
+        <p>Мы не являемся аффилированным <br>лицом компании Discord Inc.</p>
+        <p>© 2023 | Kamiko</p>
+      </div>
+      <div class="footer__container">
+        <p>Ссылки</p>
+        <ul>
+          <li>
+            <a href="#" target="_blank">Сервер поддержки
+            </a>
+          </li>
+          <li>
+            <a href="#" target="_blank">Команды
+            </a>
+          </li>
+          <li>
+            <a href="#" target="_blank">Top.gg
+            </a>
+          </li>
+          <li>
+            <a href="#" target="_blank">Мы на SDC
+            </a>
+          </li>
+        </ul>
+      </div>
+      <div class="footer__container">
+        <p>Разработка сайта: </p>
+        <div>
+          <a href="https://coconutf.tk/" target="_blank">
+            Сoconutf
           </a>
-          <a href="https://wynne.tk/">
-            <button>Wynne</button>
+          <a href="https://wynne.tk/" target="_blank">
+            Wynne
           </a>
-  </div-->
-</div>
+        </div>
+      </div>
+    </div>
+  </div>
+  </div>
 
   <script src="script.js"></script>
 </body>
