--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Kamiko</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
-  <link href="style_cmd.css" rel="stylesheet" type="text/css" />
   <link rel="icon" href="./images/icon.png" />
   <script src="https://code.jquery.com/jquery-3.6.1.min.js"
     integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
@@ -90,49 +89,22 @@
     </div>
     <div class="main2" id="main">
       <h2>Почему Kamiko?</h2>
-      <p>Lorem Ipsum - это текст-"рыба", часто используемый в печати и веб-дизайне. Lorem Ipsum является стандартной
-        "рыбой" для текстов на латинице с начала XVI века. В то время некий безымянный печатник создал большую коллекцию
-        размеров и форм шрифтов, используя Lorem Ipsum для распечатки образцов. Lorem Ipsum не только успешно пережил
-        без заметных изменений пять веков, но и перешагнул в электронный дизайн. Его популяризации в новое время
-        послужили публикация листов Letraset с образцами Lorem Ipsum в 60-х годах и, в более недавнее время, программы
-        электронной вёрстки типа Aldus PageMaker, в шаблонах которых используется Lorem Ipsum.</p>
+      <p>Уникальный бот, который поможет создать уютное и весёлое место! Украсить общение стало очень просто.</p>
     </div>
   </div>
-  <div class="advantages1">
-    <div class="advantages">
-      <div class="uptimes2">
-        <div class="uptime">
-          <h3>Непрерывная работа 99,99%</h3>
-          <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
-            industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
-            scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into
-            electronic typesetting,</p>
-        </div>
-        <div class="chat">
-          <h3>Чат</h3>
-          <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
-            industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
-            scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into
-            electronic typesetting,</p>
-        </div>
+  <div class="advantages">
+    <div class="advantages__items">
+      <div class="advantages__container">
+        <h3>Непрерывная работа 99,99%</h3>
+        <p>Профессиональный Discord-бот на библиотеке discord.js. На быстром и надёжном хостинге, круглосуточная работа. Пользуйтесь ботом когда угодно!</p>
       </div>
-      <div class="function5">
-        <div class="function2">
-          <h3>Функции</h3>
-          <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
-            industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
-            scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into
-            electronic typesetting,
-            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
-            industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
-            scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into
-            electronic typesetting,</p>
-        </div>
-        <div class="text3">
-          <h3>Безопасность</h3>
-          <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
-            industry's standard dummy text ever since the 1500s,</p>
-        </div>
+      <div class="advantages__container">
+        <h3>Поддержка</h3>
+        <p>Мы поддерживаем бота постоянно, часто выпускаем обновления. Также у нас есть Discord-сервер для поддержки Kamiko. Там вы можете задать вопрос, предложить идею, сообщить о багах</p>
+      </div>
+      <div class="advantages__container">
+        <h3>Функции</h3>
+        <p>Более чем 50 команд для ваших серверов и участников. Большое количество ролевых команд, по сравнению с другими Discord-ботами. С каждым обновлением улучшаются и добавляются новые функции!</p>
       </div>
     </div>
   </div>
