--- a/index.html
+++ b/index.html
@@ -3,12 +3,26 @@
 
 <head>
   <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="theme-color" content="#e9cdeb">
   <title>Kamiko</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
   <link rel="icon" href="./images/icon.png" />
   <script src="https://code.jquery.com/jquery-3.6.1.min.js"
     integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
+  <meta property="og:locale" content="ru_RU" />
+  <meta property="og:type" content="article" />
+  <meta property="og:title" content="Kamiko" />
+  <meta property="og:description" content="Один из самых лучших аниме-ботов для лампового общения" />
+  <meta property="og:image" content="images/backgrounds/bg2.webp" />
+  <meta property="og:url" content="https://kamiko.ml" />
+  <meta property="og:site_name" content="Укрась свой Discord-сервер" />
+  <meta name="twitter:card" content="summary" />
+  <meta name="twitter:site" content="Kamiko" />
+  <meta name="twitter:title" content="Kamiko" />
+  <meta name="twitter:description" content="Одно из самых популярных культурных СНГ сообществ " />
+  <meta name="twitter:image" content="images/backgrounds/bg2.webp" />
 </head>
 
 <body>
@@ -21,7 +35,7 @@
           </a>
         </div>
         <div class="nav__container">
-          <a href="https://discord.com/api/oauth2/authorize?client_id=980377656291913728&permissions=8&scope=bot"
+          <a href="add"
             target="_blank">
             <button><svg version="1.0" xmlns="http://www.w3.org/2000/svg" width="22px" height="22px"
                 viewBox="0 0 512.000000 512.000000" preserveAspectRatio="xMidYMid meet">
@@ -31,7 +45,7 @@
                 </g>
               </svg>Добавить в Discord</button>
           </a>
-          <a href="https://discord.gg/QRTDqhT7Jk" target="_blank">
+          <a href="support" target="_blank">
             <button><svg version="1.0" xmlns="http://www.w3.org/2000/svg" width="22px" height="22px"
                 viewBox="0 0 512.000000 512.000000" preserveAspectRatio="xMidYMid meet">
                 <g transform="translate(0.000000,512.000000) scale(0.100000,-0.100000)" stroke="none">
@@ -96,7 +110,7 @@
     <div class="advantages__items">
       <div class="advantages__container">
         <h3>Непрерывная работа 99,99%</h3>
-        <p>Профессиональный Discord-бот на библиотеке discord.js. На быстром и надёжном хостинге, круглосуточная работа. Пользуйтесь ботом когда угодно!</p>
+        <p>Профессиональный Discord-бот на библиотеке discord.js. На быстром и надёжном хостинге, что делает бота 24/7. Пользуйтесь ботом когда угодно! Поддерживайте активность участников круглосуточно!</p>
       </div>
       <div class="advantages__container">
         <h3>Поддержка</h3>
@@ -104,7 +118,7 @@
       </div>
       <div class="advantages__container">
         <h3>Функции</h3>
-        <p>Более чем 50 команд для ваших серверов и участников. Большое количество ролевых команд, по сравнению с другими Discord-ботами. С каждым обновлением улучшаются и добавляются новые функции!</p>
+        <p>Более чем 50 слэш-команд для ваших серверов и участников. Большое количество ролевых команд, по сравнению с другими Discord-ботами. С каждым обновлением улучшаются и добавляются новые функции!</p>
       </div>
     </div>
   </div>
@@ -113,14 +127,10 @@
       <h5>Создайте уютную атмосферу</h5>
       <div class="support__containers">
         <div class="support__container">
-          <a href="https://discord.com/oauth2/authorize?client_id=980377656291913728&permissions=8&scope=bot"
-            target="_blank">
-            Добавить в Discord
-          </a>
+          <a href="add" target="_blank">Добавить в Discord</a>
         </div>
         <div class="support__container">
-          <a href="https://discord.com/invite/QRTDqhT7Jk" target="_blank">Сервер поддержки
-          </a>
+          <a href="support" target="_blank">Сервер поддержки</a>
         </div>
       </div>
     </div>
