--- a/commands.html
+++ b/commands.html
@@ -22,7 +22,7 @@
           </a>
         </div>
         <div class="nav__container">
-          <a href="https://discord.com/api/oauth2/authorize?client_id=980377656291913728&permissions=8&scope=bot" target="_blank">
+          <a href="add" target="_blank">
             <button><svg version="1.0" xmlns="http://www.w3.org/2000/svg" width="22px" height="22px"
                 viewBox="0 0 512.000000 512.000000" preserveAspectRatio="xMidYMid meet">
                 <g transform="translate(0.000000,512.000000) scale(0.100000,-0.100000)" stroke="none">
@@ -31,7 +31,7 @@
                 </g>
               </svg>Добавить в Discord</button>
           </a>
-          <a href="https://discord.gg/QRTDqhT7Jk" target="_blank">
+          <a href="support" target="_blank">
             <button><svg version="1.0" xmlns="http://www.w3.org/2000/svg" width="22px" height="22px"
                 viewBox="0 0 512.000000 512.000000" preserveAspectRatio="xMidYMid meet">
                 <g transform="translate(0.000000,512.000000) scale(0.100000,-0.100000)" stroke="none">
