--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 </g>
               </svg>Сервер поддержки</button>
           </a>
-          <a href="commands.html">
+          <a href="commands">
             <button><svg version="1.0" xmlns="http://www.w3.org/2000/svg" width="22px" height="22px"
                 viewBox="0 0 512.000000 512.000000" preserveAspectRatio="xMidYMid meet">
 
@@ -73,14 +73,14 @@
       </div>
       <div class="menu">
         <ul>
-          <a href="https://discord.com/oauth2/authorize?client_id=980377656291913728&permissions=8&scope=bot"
+          <a href="add"
             target="_blank">
             <li>Добавить в Discord</li>
           </a>
-          <a href="https://discord.com/invite/QRTDqhT7Jk" target="_blank">
+          <a href="support" target="_blank">
             <li>Сервер поддержки</li>
           </a>
-          <a href="commands.html">
+          <a href="commands">
             <li>Команды</li>
           </a>
         </ul>
@@ -103,7 +103,7 @@
     </div>
     <div class="main2" id="main">
       <h2>Почему Kamiko?</h2>
-      <p>Уникальный бот, который поможет создать уютное и весёлое место! Украсить общение стало очень просто.</p>
+      <p>Уникальный бот, который поможет создать уютное и весёлое место! Украсить общение стало очень просто, с помощью продвинутого Discord-бота на слэш-командах и с новым функционалом. Создайте уютную атмосферу, добавив Kamiko на свой Discord-сервер!</p>
     </div>
   </div>
   <div class="advantages">
@@ -146,20 +146,16 @@
         <p>Ссылки</p>
         <ul>
           <li>
-            <a href="#" target="_blank">Сервер поддержки
-            </a>
+            <a href="support" target="_blank">Сервер поддержки</a>
           </li>
           <li>
-            <a href="#" target="_blank">Команды
-            </a>
+            <a href="commands" target="_blank">Команды</a>
           </li>
           <li>
-            <a href="#" target="_blank">Top.gg
-            </a>
+            <a href="#" target="_blank">Top.gg</a>
           </li>
           <li>
-            <a href="#" target="_blank">Мы на SDC
-            </a>
+            <a href="#" target="_blank">Мы на SDC</a>
           </li>
         </ul>
       </div>
