--- a/commands.html
+++ b/commands.html
@@ -42,7 +42,7 @@
                 </g>
               </svg>Сервер поддержки</button>
           </a>
-          <a href="commands.html">
+          <a href="commands">
             <button><svg version="1.0" xmlns="http://www.w3.org/2000/svg" width="22px" height="22px"
                 viewBox="0 0 512.000000 512.000000" preserveAspectRatio="xMidYMid meet">
 
@@ -59,13 +59,13 @@
       </div>
       <div class="menu">
         <ul>
-          <a href="https://discord.com/oauth2/authorize?client_id=980377656291913728&permissions=8&scope=bot" target="_blank">
+          <a href="add" target="_blank">
             <li>Добавить в Discord</li>
           </a>
-          <a href="https://discord.com/invite/QRTDqhT7Jk" target="_blank">
+          <a href="support" target="_blank">
             <li>Сервер поддержки</li>
           </a>
-          <a href="commands.html">
+          <a href="commands">
             <li>Команды</li>
           </a>
         </ul>
@@ -799,13 +799,218 @@
               <div>
                 <span>Применение:</span>
                 <ul>
-                  <li>/wallpaper</li>
+                  <li>/wallpaper mobile</li>
+                  <li>/wallpaper pc</li>
                 </ul>
               </div>
               <div>
                 <span>Примеры:</span>
                 <ul>
-                  <li>/wallpaper</li>
+                  <li>/wallpaper mobile</li>
+                  <li>/wallpaper pc</li>
+                </ul>
+              </div>
+            </div>
+          </details>
+        </div>
+        <div class="cmd__container cmd__19 img">
+          <details>
+            <summary onclick="blockActive19()">
+              <div>
+                <svg width="24" height="24" viewBox="0 0 28 28" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path fill-rule="evenodd" clip-rule="evenodd"
+                    d="M3.11111 0C1.39289 0 0 1.39289 0 3.11111V24.8889C0 26.6072 1.39289 28 3.11111 28H24.8889C26.6072 28 28 26.6072 28 24.8889V3.11111C28 1.39289 26.6072 0 24.8889 0H3.11111ZM21.6214 8.42207L19.4216 6.22219L6.22222 19.4216L8.4221 21.6214L21.6214 8.42207Z"
+                    style="transition: fill 0.2s ease-in-out 0s;"></path>
+                </svg>
+                <p>foxgirl - <span>Лиса-девочка</span></p>
+              </div>
+              <svg version="1.0" xmlns="http://www.w3.org/2000/svg" width="20px" height="20px"
+                viewBox="0 0 512.000000 512.000000">
+                <g transform="translate(0.000000,512.000000) scale(0.100000,-0.100000)" fill="#9c9c9c" stroke="none">
+                  <path d="M2431 3598 c-51 -28 -178 -153 -843 -836 -519 -533 -793 -821 -813
+-855 -27 -46 -30 -61 -30 -132 0 -70 4 -87 30 -134 16 -29 45 -66 65 -82 43
+-36 128 -69 179 -69 55 0 133 26 172 57 26 21 997 1012 1334 1361 l32 34 679
+-696 c750 -769 735 -756 854 -756 85 0 147 25 206 84 83 84 105 189 62 303
+-19 51 -45 82 -227 268 -114 116 -476 486 -806 824 -664 680 -642 661 -767
+661 -56 0 -76 -5 -127 -32z" />
+                </g>
+              </svg>
+            </summary>
+            <div class="details">
+              <div>
+                <span>Применение:</span>
+                <ul>
+                  <li>/foxgirl</li>
+                </ul>
+              </div>
+              <div>
+                <span>Примеры:</span>
+                <ul>
+                  <li>/foxgirl</li>
+                </ul>
+              </div>
+            </div>
+          </details>
+        </div>
+        <div class="cmd__container cmd__20 rp">
+          <details>
+            <summary onclick="blockActive20()">
+              <div>
+                <svg width="24" height="24" viewBox="0 0 28 28" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path fill-rule="evenodd" clip-rule="evenodd"
+                    d="M3.11111 0C1.39289 0 0 1.39289 0 3.11111V24.8889C0 26.6072 1.39289 28 3.11111 28H24.8889C26.6072 28 28 26.6072 28 24.8889V3.11111C28 1.39289 26.6072 0 24.8889 0H3.11111ZM21.6214 8.42207L19.4216 6.22219L6.22222 19.4216L8.4221 21.6214L21.6214 8.42207Z"
+                    style="transition: fill 0.2s ease-in-out 0s;"></path>
+                </svg>
+                <p>feed - <span>Покормить кого-то</span></p>
+              </div>
+              <svg version="1.0" xmlns="http://www.w3.org/2000/svg" width="20px" height="20px"
+                viewBox="0 0 512.000000 512.000000">
+                <g transform="translate(0.000000,512.000000) scale(0.100000,-0.100000)" fill="#9c9c9c" stroke="none">
+                  <path d="M2431 3598 c-51 -28 -178 -153 -843 -836 -519 -533 -793 -821 -813
+-855 -27 -46 -30 -61 -30 -132 0 -70 4 -87 30 -134 16 -29 45 -66 65 -82 43
+-36 128 -69 179 -69 55 0 133 26 172 57 26 21 997 1012 1334 1361 l32 34 679
+-696 c750 -769 735 -756 854 -756 85 0 147 25 206 84 83 84 105 189 62 303
+-19 51 -45 82 -227 268 -114 116 -476 486 -806 824 -664 680 -642 661 -767
+661 -56 0 -76 -5 -127 -32z" />
+                </g>
+              </svg>
+            </summary>
+            <div class="details">
+              <div>
+                <span>Применение:</span>
+                <ul>
+                  <li>/feed {name}</li>
+                  <li>/feed {name} (reason)</li>
+                </ul>
+              </div>
+              <div>
+                <span>Примеры:</span>
+                <ul>
+                  <li>/feed @kamiko</li>
+                  <li>/feed @kamiko просто так</li>
+                </ul>
+              </div>
+            </div>
+          </details>
+        </div>
+        <div class="cmd__container cmd__21 rp">
+          <details>
+            <summary onclick="blockActive21()">
+              <div>
+                <svg width="24" height="24" viewBox="0 0 28 28" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path fill-rule="evenodd" clip-rule="evenodd"
+                    d="M3.11111 0C1.39289 0 0 1.39289 0 3.11111V24.8889C0 26.6072 1.39289 28 3.11111 28H24.8889C26.6072 28 28 26.6072 28 24.8889V3.11111C28 1.39289 26.6072 0 24.8889 0H3.11111ZM21.6214 8.42207L19.4216 6.22219L6.22222 19.4216L8.4221 21.6214L21.6214 8.42207Z"
+                    style="transition: fill 0.2s ease-in-out 0s;"></path>
+                </svg>
+                <p>bonk - <span>Стукнуть кого-то</span></p>
+              </div>
+              <svg version="1.0" xmlns="http://www.w3.org/2000/svg" width="20px" height="20px"
+                viewBox="0 0 512.000000 512.000000">
+                <g transform="translate(0.000000,512.000000) scale(0.100000,-0.100000)" fill="#9c9c9c" stroke="none">
+                  <path d="M2431 3598 c-51 -28 -178 -153 -843 -836 -519 -533 -793 -821 -813
+-855 -27 -46 -30 -61 -30 -132 0 -70 4 -87 30 -134 16 -29 45 -66 65 -82 43
+-36 128 -69 179 -69 55 0 133 26 172 57 26 21 997 1012 1334 1361 l32 34 679
+-696 c750 -769 735 -756 854 -756 85 0 147 25 206 84 83 84 105 189 62 303
+-19 51 -45 82 -227 268 -114 116 -476 486 -806 824 -664 680 -642 661 -767
+661 -56 0 -76 -5 -127 -32z" />
+                </g>
+              </svg>
+            </summary>
+            <div class="details">
+              <div>
+                <span>Применение:</span>
+                <ul>
+                  <li>/bonk {name}</li>
+                  <li>/bonk {name} (reason)</li>
+                </ul>
+              </div>
+              <div>
+                <span>Примеры:</span>
+                <ul>
+                  <li>/bonk @kamiko</li>
+                  <li>/bonk @kamiko просто так</li>
+                </ul>
+              </div>
+            </div>
+          </details>
+        </div>
+        <div class="cmd__container cmd__22 rp">
+          <details>
+            <summary onclick="blockActive22()">
+              <div>
+                <svg width="24" height="24" viewBox="0 0 28 28" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path fill-rule="evenodd" clip-rule="evenodd"
+                    d="M3.11111 0C1.39289 0 0 1.39289 0 3.11111V24.8889C0 26.6072 1.39289 28 3.11111 28H24.8889C26.6072 28 28 26.6072 28 24.8889V3.11111C28 1.39289 26.6072 0 24.8889 0H3.11111ZM21.6214 8.42207L19.4216 6.22219L6.22222 19.4216L8.4221 21.6214L21.6214 8.42207Z"
+                    style="transition: fill 0.2s ease-in-out 0s;"></path>
+                </svg>
+                <p>blush - <span>Покраснеть</span></p>
+              </div>
+              <svg version="1.0" xmlns="http://www.w3.org/2000/svg" width="20px" height="20px"
+                viewBox="0 0 512.000000 512.000000">
+                <g transform="translate(0.000000,512.000000) scale(0.100000,-0.100000)" fill="#9c9c9c" stroke="none">
+                  <path d="M2431 3598 c-51 -28 -178 -153 -843 -836 -519 -533 -793 -821 -813
+-855 -27 -46 -30 -61 -30 -132 0 -70 4 -87 30 -134 16 -29 45 -66 65 -82 43
+-36 128 -69 179 -69 55 0 133 26 172 57 26 21 997 1012 1334 1361 l32 34 679
+-696 c750 -769 735 -756 854 -756 85 0 147 25 206 84 83 84 105 189 62 303
+-19 51 -45 82 -227 268 -114 116 -476 486 -806 824 -664 680 -642 661 -767
+661 -56 0 -76 -5 -127 -32z" />
+                </g>
+              </svg>
+            </summary>
+            <div class="details">
+              <div>
+                <span>Применение:</span>
+                <ul>
+                  <li>/cuddle</li>
+                  <li>/cuddle (name)</li>
+                </ul>
+              </div>
+              <div>
+                <span>Примеры:</span>
+                <ul>
+                  <li>/cuddle</li>
+                  <li>/cuddle @kamiko</li>
+                </ul>
+              </div>
+            </div>
+          </details>
+        </div>
+        <div class="cmd__container cmd__23 rp">
+          <details>
+            <summary onclick="blockActive23()">
+              <div>
+                <svg width="24" height="24" viewBox="0 0 28 28" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path fill-rule="evenodd" clip-rule="evenodd"
+                    d="M3.11111 0C1.39289 0 0 1.39289 0 3.11111V24.8889C0 26.6072 1.39289 28 3.11111 28H24.8889C26.6072 28 28 26.6072 28 24.8889V3.11111C28 1.39289 26.6072 0 24.8889 0H3.11111ZM21.6214 8.42207L19.4216 6.22219L6.22222 19.4216L8.4221 21.6214L21.6214 8.42207Z"
+                    style="transition: fill 0.2s ease-in-out 0s;"></path>
+                </svg>
+                <p>kick - <span>Ударить кого-то ногой</span></p>
+              </div>
+              <svg version="1.0" xmlns="http://www.w3.org/2000/svg" width="20px" height="20px"
+                viewBox="0 0 512.000000 512.000000">
+                <g transform="translate(0.000000,512.000000) scale(0.100000,-0.100000)" fill="#9c9c9c" stroke="none">
+                  <path d="M2431 3598 c-51 -28 -178 -153 -843 -836 -519 -533 -793 -821 -813
+-855 -27 -46 -30 -61 -30 -132 0 -70 4 -87 30 -134 16 -29 45 -66 65 -82 43
+-36 128 -69 179 -69 55 0 133 26 172 57 26 21 997 1012 1334 1361 l32 34 679
+-696 c750 -769 735 -756 854 -756 85 0 147 25 206 84 83 84 105 189 62 303
+-19 51 -45 82 -227 268 -114 116 -476 486 -806 824 -664 680 -642 661 -767
+661 -56 0 -76 -5 -127 -32z" />
+                </g>
+              </svg>
+            </summary>
+            <div class="details">
+              <div>
+                <span>Применение:</span>
+                <ul>
+                  <li>/kick {name}</li>
+                  <li>/kick {name} (reason)</li>
+                </ul>
+              </div>
+              <div>
+                <span>Примеры:</span>
+                <ul>
+                  <li>/kick @kamiko</li>
+                  <li>/kick @kamiko просто так</li>
                 </ul>
               </div>
             </div>
